dnl Process this file with autoconf to produce a `configure' script.
dnl To rebuild `configure' from this, execute the command
dnl 	autoconf
dnl in the directory containing this script.
AC_PREREQ(2.9)dnl
AC_INIT(psgml.el)

PACKAGE=psgml
VERSION=1.3.2
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

AC_SET_MAKE
AC_PROG_INSTALL
AM_PATH_LISPDIR
AC_PATH_PROG(MAKEINFO, makeinfo, no)
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_OUTPUT(Makefile)

dnl configure.in ends here
